--- a/npcs/yasloh_brain.yaml
+++ b/npcs/yasloh_brain.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: middle aged adult
+    age: Middle Aged Adult
 
     #
     # Races (case insensitive):
@@ -461,59 +461,103 @@ npc:
   # ???Max length???
   #
   specialties:
+    saving-throws:
+    - Strength
+    - Intelligence
+    damage-immunities:
+    - N/A
+    condition-immunities:
+    - N/A
+    resistances:
+    - Magic
     skills:
-
-    - Swamp Gnome Abilities:
-       - Gnome Cunning: Advantage on all Intelligence, Wisdom and Charisma saving throws againts magic
-       - Darkvision: can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You can't discern color in darkness, only shades of gray           
-       - Artificers Lore: Whenever you make an Intelligence (History) check related to magical, alchemical, or technological items, you can add twice your proficiency bonus instead of any other proficiency bonus that may apply
-       - Tinker:  You have proficiency with artisan tools (tinker's tools). Using those tools, you can spend 1 hour and 10 gp worth of materials to construct a Tiny clockwork device (AC 5, 1 hp). The device ceases to function
-                  after 24 hours (unless you spend 1 hour repairing it to keep the device functioning), or when you use your action to dismantle it; at that time, you can reclaim the materials used to create it. You can have up
-                  to three such devices active at a time. When you create a device, choose one of the following options - 
-         Clockwork Toy: This toy is a clockwork animal, monster, or person, such as a frog, mouse, bird, dragon, or soldier. When placed on the ground, the toy moves 5 feet across the ground on each of your turns in
-                        a random direction. It makes noises as appropriate to the creature it represents.
-         Fire Starter: The device produces a miniature flame, which you can use to light a candle, torch, or campfire. Using the device requires your action.
-         Music Box: When opened, this music box plays a single song at a moderate volume. The box stops playing when it reaches the song's end or when it is closed.  
+    - N/A
+    proficiencies:
+    - Arcana
+    - History
+    - Religion    
+    - Nature
+  special-abilities:
+  - title: Swamp Gnome Abilities
+  - abilities: 
+    - title: Gnome Cunning
+    - content: Advantage on all Intelligence, Wisdom and Charisma saving throws againts magic
+    - title: Darkvision
+    - content: Can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You can't discern color in darkness, only shades of gray           
+    - title: Artificers Lore
+    - content: Whenever you make an Intelligence (History) check related to magical, alchemical, or technological items, you can add twice your proficiency bonus instead of any other proficiency bonus that may apply
+    - title: Tinker
+    - content: You have proficiency with artisan tools (tinker's tools). Using those tools, you can spend 1 hour and 10 gp worth of materials to construct a Tiny clockwork device (AC 5, 1 hp). The device ceases to function
+               after 24 hours (unless you spend 1 hour repairing it to keep the device functioning), or when you use your action to dismantle it; at that time, you can reclaim the materials used to create it. You can have up
+               to three such devices active at a time. When you create a device, choose one of the following options - 
+               Clockwork Toy - This toy is a clockwork animal, monster, or person, such as a frog, mouse, bird, dragon, or soldier. When placed on the ground, the toy moves 5 feet across the ground on each of your turns in
+                               a random direction. It makes noises as appropriate to the creature it represents.
+               Fire Starter - The device produces a miniature flame, which you can use to light a candle, torch, or campfire. Using the device requires your action.
+               Music Box - When opened, this music box plays a single song at a moderate volume. The box stops playing when it reaches the song's end or when it is closed.  
                   
     - Wizard Abilities:
-         - Arcane Recovery: After a short rest can recover a spell slot up to 3rd level
-         - Spell Mastery: Choose a 1st-level Wizard spell and a 2nd-level Wizard spell that are in your Spellbook. You can cast those Spells at their lowest level without expending a spell slot when you have them prepared. 
-                          If you want to cast either spell at a higher level, you must expend a spell slot as normal
-         - Signature Spells: Choose two 3rd-level Wizard Spells in your Spellbook as your Signature Spells. You always have these Spells prepared, they don't count against the number of Spells you have prepared, and you can 
-                             cast each of them once at 3rd Level without expending a spell slot.			  
-         - Spellcasting: Spell DC 17
-           Cantrips: Minor Illusion, Mage Hand, Message, Prestidigitation, Shocking Grasp, Thunderclap
-           1st Level: Disguise Self, Illusory Script, Silent Image, Charm Person
-           2nd Level: Invisibility, Mirror Image, Phantasmal Force 
-           3rd Level: Fear, Hypnotic Pattern, Major Image
-           4th Level: Greater Invisibility, Hallucinatory Terrain, Phantasmal Killer
-           5th Level: Dream, Mislead
-           6th Level: Programme Illusion
-           7th Level: Simulacrum
-           8th Level: Telepathy
-            
-    - School of Enchantment Abilities:
-       - Illusion Savant: the gold and time you must spend to copy a Illusion spell into your spellbook is halved.
-       - Improved Minor Illusion: you learn the Minor Illusion cantrip. If you already know this cantrip, you learn a different wizard cantrip of your choice. The cantrip doesn't count against your number of cantrips known. 
-                                  When you cast Minor Illusion, you can create both a sound and an image with a single casting of the spell.           
-       - Malleable Illusion: when you cast an illusion spell that has a duration of 1 minute or longer, you can use your action to change the nature of that illusion (using the spell's normal parameters for the illusion), 
-                             provided that you can see the illusion.
-       - Illusory Self: you can create an illusory duplicate of yourself as an instant, almost instinctual reaction to danger. When a creature makes an attack roll against you, you can use your reaction to interpose the illusory
-                        duplicate between the attacker and yourself. The attack automatically misses you, then the illusion dissipates. Once you use this feature, you can't use it again until you finish a short or long rest.
-       - Illusory Reality: you have learned the secret of weaving shadow magic into your illusions to give them a semi-reality. When you cast an illusion spell of 1st level or higher, you can choose one inanimate, nonmagical 
-                           object that is part of the illusion and make that object real. You can do this on your turn as a bonus action while the spell is ongoing. The object remains real for 1 minute. For example, you can 
-                           create an illusion of a bridge over a chasm and then make it real long enough for your allies to cross. The object can't deal damage or otherwise directly harm anyone.
+  - title: Wizard Abilities
+  - abilities:
+    - title: Arcane Recovery
+    - content: After a short rest can recover a spell slot up to 3rd level
+    - title: Spell Mastery
+    - content: Choose a 1st-level Wizard spell and a 2nd-level Wizard spell that are in your Spellbook. You can cast those Spells at their lowest level without expending a spell slot when you have them prepared. 
+               If you want to cast either spell at a higher level, you must expend a spell slot as normal
+    - title: Signature Spells
+    - content: Choose two 3rd-level Wizard Spells in your Spellbook as your Signature Spells. You always have these Spells prepared, they don't count against the number of Spells you have prepared, and you can 
+               cast each of them once at 3rd Level without expending a spell slot.			  
+  - title: Spellcasting
+  - abilities:
+    - title: Spell DC
+    - content: 17 
+    - title: Cantrips
+    - content: Minor Illusion, Mage Hand, Message, Prestidigitation, Shocking Grasp, Thunderclap
+    - title: 1st Level
+    - content: Disguise Self, Illusory Script, Silent Image, Charm Person
+    - title: 2nd Level
+    - content: Invisibility, Mirror Image, Phantasmal Force 
+    - title: 3rd Level
+    - contnet: Fear, Hypnotic Pattern, Major Image
+    - title: 4th Level
+    - content: Greater Invisibility, Hallucinatory Terrain, Phantasmal Killer
+    - title: 5th Level
+    - content: Dream, Mislead
+    - title: 6th Level
+    - content: Programme Illusion
+    - title: 7th Level
+    - content: Simulacrum
+    - title: 8th Level
+    - content: Telepathy
+  - title: School of Illusion Abilities
+  - abilities: 
+    - title: Illusion Savant
+    - content: The gold and time you must spend to copy a Illusion spell into your spellbook is halved.
+    - title: Improved Minor Illusion
+    - content: You learn the Minor Illusion cantrip. If you already know this cantrip, you learn a different wizard cantrip of your choice. The cantrip doesn't count against your number of cantrips known. 
+               When you cast Minor Illusion, you can create both a sound and an image with a single casting of the spell.           
+    - title: Malleable Illusion
+    - content: When you cast an illusion spell that has a duration of 1 minute or longer, you can use your action to change the nature of that illusion (using the spell's normal parameters for the illusion), 
+               provided that you can see the illusion.
+    - title: Illusory Self
+    - content: You can create an illusory duplicate of yourself as an instant, almost instinctual reaction to danger. When a creature makes an attack roll against you, you can use your reaction to interpose the illusory
+               duplicate between the attacker and yourself. The attack automatically misses you, then the illusion dissipates. Once you use this feature, you can't use it again until you finish a short or long rest.
+    - title: Illusory Reality
+    - content: You have learned the secret of weaving shadow magic into your illusions to give them a semi-reality. When you cast an illusion spell of 1st level or higher, you can choose one inanimate, nonmagical 
+               object that is part of the illusion and make that object real. You can do this on your turn as a bonus action while the spell is ongoing. The object remains real for 1 minute. For example, you can 
+               create an illusion of a bridge over a chasm and then make it real long enough for your allies to cross. The object can't deal damage or otherwise directly harm anyone.
+
+  - title: Feats
+  - content: Keen Mind, War Caster, Spell Sniper
        
-    special-abilities:
-       - Proficiencies: Arcana, History, Religion, Nature
-       - Feats: Keen Mind, War Caster, Spell Sniper
-       
-    attacks: |
-      1 attack with spell attack or quarterstaff
-    combat-tactics: |
-      Yasloh will rarely engage in direct hand-to-hand combat and almost exclusively rely on his spells to create distance and eliminate hostiles.
-    special-equipment:      
-    - Thaum Gauge Wristband: a personal thaumometer used to detect concentrations of magical potential.    
+  - title: Attacks
+  - content: 1 attack with spell attack or quarterstaff
+  - title: Combat Tactics
+  - content: Yasloh will rarely engage in direct hand-to-hand combat and almost exclusively rely on his spells to create distance and eliminate hostiles.
+
+  - title: Special Equipment
+  - abilities:
+    - title: Thaum Gauge Wristband
+    - content: A personal thaumometer used to detect concentrations of magical potential.    
     
     
   profile:
