--- a/npcs/yoloff_denton.yaml
+++ b/npcs/yoloff_denton.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: older adult
+    age: Older Adult
 
     #
     # Races (case insensitive):
@@ -465,50 +465,118 @@ npc:
   # ???Max length???
   #
   specialties:
+    saving-throws:
+    - Constitution
+    - Wisdom
+    damage-immunities:
+    - N/A
+    condition-immunities:
+    - N/A
+    resistances:
+    - Poison
     skills:
+    - Trainer
+    proficiencies:
+    - Insight
+    - History
+    - Perception    
+    - Intimidation
+    - Investigation
+    - Mason's Tools
+  special-abilities:
+  - title: Dwarf Abilities
+  - abilities: 
+    - title: Darkvision
+    - content: Can see in dim light within 60 feet as if it were bright light, and in Darkness as if it were dim light. Can’t discern color in Darkness, only Shades of Gray.
+    - title: Dwarven Resistance
+    - content: Has advantage on Saving Throws against poison, and has Resistance against poison damage
+    - title: Tool Proficiency
+    - content: You gain proficiency with the artisan's tools of your choice; smith's tools, brewer's supplies, or mason's tools.       
+    - title: Dwarven Combat Training
+    - content: Has proficiency with the Battleaxe, Handaxe, Light Hammer, and Warhammer.
+    - title: Stonecunning
+    - content: Whenever making an Intelligence (History) check related to the Origin of stonework, he is considered proficient in the History skill and adds double his Proficiency Bonus to the check, 
+               instead of his normal Proficiency Bonus 
+  - title: Fighter Abilities
+  - abilities:
+    - title: Fighting Style
+    - content: Protection - When a creature you can see attacks a target other than you that is within 5 feet of you, you can use your reaction to impose disadvantage on the attack roll. You must be wielding a shield.
+    - title: Second Wind
+    - content: Bonus Action to regain 1d10 + 7
+    - title: Action Surge
+    - content: Once every short/long rest can take an extra action
+    - title: Extra Attack
+    - content: Can attack twice each turn
+  - title: Battle Master Abilities
+  - abilities: 
+    - title: Combat Superiority
+    - content: Maneuvers - You learn three maneuvers of your choice. Many maneuvers enhance an attack in some way. You can use only one maneuver per attack. You learn two additional maneuvers of your choice at 7th, 10th, and 15th 
+                           level. Each time you learn new maneuvers, you can also replace one maneuver you know with a different one
+               Ambush - When you make a Dexterity (Stealth) check or an initiative roll, you can expend one superiority die and add the die to the roll, provided you aren't incapacitated.
+               Bait and Switch - When you're within 5 feet of a creature on your turn, you can expend one superiority die and switch places with that creature, provided you spend at least 5 feet of movement and the creature
+                                 is willing and isn't incapacitated. This movement doesn't provoke opportunity attacks. Roll the superiority die. Until the start of your next turn, you or the other creature (your choice) 
+                                 gains a bonus to AC equal to the number rolled.
+               Brace - When a creature you can see moves into the reach you have with the melee weapon you're wielding, you can use your reaction to expend one superiority die and make one attack against the creature, using
+                       that weapon. If the attack hits, add the superiority die to the weapon's damage roll.
+               Commander's Strike - When you take the Attack action on your turn, you can forgo one of your attacks and use a bonus action to direct one of your companions to strike. When you do so, choose a friendly 
+                                    creature who can see or hear you and expend one superiority die. That creature can immediately use its reaction to make one weapon attack, adding the superiority die to the attack's 
+                                    damage roll.
+               Commanding Presence - When you make a Charisma (Intimidation), a Charisma (Performance), or a Charisma (Persuasion) check, you can expend one superiority die and add the superiority die to the ability check.
+               Disarming Attack - When you hit a creature with a weapon attack, you can expend one superiority die to attempt to disarm the target, forcing it to drop one item of your choice that it's holding. You add the 
+                                  superiority die to the attack's damage roll, and the target must make a Strength saving throw. On a failed save, it drops the object you choose. The object lands at its feet.
+               Distracting Strike - When you hit a creature with a weapon attack, you can expend one superiority die to distract the creature, giving your allies an opening. You add the superiority die to the attack's 
+                                    damage roll. The next attack roll against the target by an attacker other than you has advantage if the attack is made before the start of your next turn.
+               Evasive Footwork - When you move, you can expend one superiority die, rolling the die and adding the number rolled to your AC until you stop moving.
+               Feinting Attack - You can expend one superiority die and use a bonus action on your turn to feint, choosing one creature within 5 feet of you as your target. You have advantage on your next attack roll 
+                                 against that creature this turn. If that attack hits, add the superiority die to the attack's damage roll.
+               Goading Attack - When you hit a creature with a weapon attack, you can expend one superiority die to attempt to goad the target into attacking you. You add the superiority die to the attack's damage roll, and
+                                the target must make a Wisdom saving throw. On a failed save, the target has disadvantage on all attack rolls against targets other than you until the end of your next turn.
+               Grappling Strike - Immediately after you hit a creature with a melee attack on your turn, you can expend one superiority die and then try to grapple the target as a bonus action (see the Player's Handbook for
+                                  rules on grappling). Add the superiority die to your Strength (Athletics) check.
+               Lunging Attack - When you make a melee weapon attack on your turn, you can expend one superiority die to increase your reach for that attack by 5 feet. If you hit, you add the superiority die to the attack's 
+                                damage roll.
+               Maneuvering Attack - When you hit a creature with a weapon attack, you can expend one superiority die to maneuver one of your comrades into a more advantageous position. You add the superiority die to the 
+                                    attack's damage roll, and you choose a friendly creature who can see or hear you. That creature can use its reaction to move up to half its speed without provoking opportunity attacks 
+                                    from the target of your attack.
+               Menacing Attack - When you hit a creature with a weapon attack, you can expend one superiority die to attempt to frighten the target. You add the superiority die to the attack's damage roll, and the target 
+                                 must make a Wisdom saving throw. On a failed save, it is frightened of you until the end of your next turn.
+               Parry - When another creature damages you with a melee attack, you can use your reaction and expend one superiority die to reduce the damage by the number you roll on your superiority die + your Dexterity 
+                       modifier.
+               Precision Attack - When you make a weapon attack roll against a creature, you can expend one superiority die to add it to the roll. You can use this maneuver before or after making the attack roll, but before
+                                  any effects of the attack are applied.
+               Pushing Attack - When you hit a creature with a weapon attack, you can expend one superiority die to attempt to drive the target back. You add the superiority die to the attack's damage roll, and if the target
+                                is Large or smaller, it must make a Strength saving throw. On a failed save, you push the target up to 15 feet away from you.
+               Quick Toss - As a bonus action, you can expend one superiority die and make a ranged attack with a weapon that has the thrown property. You can draw the weapon as part of making this attack. If you hit, add 
+                            the superiority die to the weapon's damage roll.
+               Rally - On your turn, you can use a bonus action and expend one superiority die to bolster the resolve of one of your companions. When you do so, choose a friendly creature who can see or hear you. That 
+                       creature gains temporary hit points equal to the superiority die roll + your Charisma modifier.
+               Riposte - When a creature misses you with a melee attack, you can use your reaction and expend one superiority die to make a melee weapon attack against the creature. If you hit, you add the superiority die 
+                         to the attack's damage roll.
+               Sweeping Attack - When you hit a creature with a melee weapon attack, you can expend one superiority die to attempt to damage another creature with the same attack. Choose another creature within 5 feet of 
+                                 the original target and within your reach. If the original attack roll would hit the second creature, it takes damage equal to the number you roll on your superiority die. The damage is of 
+                                 the same type dealt by the original attack.
+               Tactical Assessment - When you make an Intelligence (Investigation), an Intelligence (History), or a Wisdom (Insight) check, you can expend one superiority die and add the superiority die to the ability check.
+               Trip Attack - When you hit a creature with a weapon attack, you can expend one superiority die to attempt to knock the target down. You add the superiority die to the attack's damage roll, and if the target 
+                             is Large or smaller, it must make a Strength saving throw. On a failed save, you knock the target prone.
+    - title: Superiority Dice 5
+    - content: You have four superiority dice, which are d8s. A superiority die is expended when you use it. You regain all of your expended superiority dice when you finish a short or long rest. You gain another 
+               superiority die at 7th level and one more at 15th level.
+    - title: Maneuver DC 14
+    - content: 8 + your proficiency bonus + your Strength or Dexterity modifier (your choice)
+    - title: Student of War
+    - content: You gain proficiency with one type of artisan's tools of your choice
+    - title: Know Your Enemy
+    - content: If you spend at least 1 minute observing or interacting with another creature outside combat, you can learn certain information about its capabilities compared to your own. The DM tells you if the 
+               creature is your equal, superior, or inferior in regard to two of the following characteristics of your choice; Strength score, Dexterity score, Constitution score, Armor Class, Current hit points, 
+               Total class levels, if any, Fighter class levels, if any
 
-    - Dwarf Abilities:
-       - Darkvision: Accustomed to life underground, you have superior vision in dark and dim conditions. You can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You
-                     can't discern color in darkness, only shades of gray
-       - Dwarven Resistance: Has advantage on Saving Throws against poison, and has Resistance against poison damage
-       - Tool Proficiency: You gain proficiency with the artisan's tools of your choice; smith's tools, brewer's supplies, or mason's tools.       
-       - Dwarven Combat Training: Has proficiency with the Battleaxe, Handaxe, Light Hammer, and Warhammer.
-       - Stonecunning: Whenever making an Intelligence (History) check related to the Origin of stonework, he is considered proficient in the History skill and adds double his Proficiency Bonus to the check, 
-                      instead of his normal Proficiency Bonus  
-                  
-    - Fighter Abilities:
-         - Fighting Style:
-         - Second Wind: Bonus Action to regain 1d10 + 
-         - Action Surge: Once every short/long rest can take an extra action
-         - Extra Attack: Can attack twice each turn
-            
-    - Battle Master Abilities:
-       - Combat Superiority:
-         - Maneuvers: Menacing Attack, Pushing Attack, Grappling Attack
-         - Superiority Dice: 5
-         - Maneuver DC: 14
-       - Student of War: Mason's Tools
-       - Know Your Enemy: if you spend at least 1 minute observing or interacting with another creature outside combat, you can learn certain information about its capabilities compared to your own. The DM tells you if the 
-                          creature is your equal, superior, or inferior in regard to two of the following characteristics of your choice - 
-                          - Strength score
-                          - Dexterity score
-                          - Constitution score
-                          - Armor Class
-                          - Current hit points
-                          - Total class levels, if any
-                          - Fighter class levels, if any
+  - title: Feats
+  - content: Grappler
        
-    special-abilities:
-       - Proficiencies: Insight, History, Perception, Intmiidation, Mason's Tools
-       - Feats: Grappler
-       - He's good at training new recruits
-       
-    attacks: |
-      1 attack with warhammer or unarmed strike
-    combat-tactics: |
-      He's a master of combat tactics and knows various different combat maneuvers depending on the situation
-    special-equipment:      
-    - Warhammer                              
+  - title: Attacks
+  - content: 1 attack with warhammer or unarmed strike
+  - title: Combat Tactics
+  - content: He's a master of combat tactics and knows various different combat maneuvers depending on the situation                              
     
     
   profile:
